--- a/src/stylesheets/shared/styles.css
+++ b/src/stylesheets/shared/styles.css
@@ -5,7 +5,6 @@
     left: 0;
     right: 0;
 }
-
 .header {
     position: sticky;
     overflow: hidden;
@@ -17,7 +16,110 @@
     background-color: lightblue;
 }
 
-.container-margin {
+.row-margin-laterals {
     margin-left: 1rem !important;
     margin-right: 1rem !important;
+}
+.row-margin-top {
+    margin-top: 1rem !important;
+}
+
+.justify-content-center {
+    justify-content: center;
+    display: flex;
+}
+.justify-content-start {
+    justify-content: flex-start;
+    display: flex;
+}
+.justify-content-end {
+    justify-content: flex-end;
+    display: flex;
+}
+
+/****************
+  Loader
+*****************/
+.loader-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+/****************
+  Carousel
+*****************/
+.slideshow-container {
+    position: relative;
+    display: flex;
+    overflow-x: scroll;
+    width: 100%;
+}
+.slideshow-button {
+    height: 97.5%;
+    border: none;
+    background-color: lightblue;
+    opacity: 0.2;
+    transition: 0.3s;
+}
+.slideshow-button:focus {
+    outline:0;
+}
+.slideshow-button:hover {
+    opacity: 0.5;
+}
+.slideshow-button:active {
+    background: lightblue;
+    opacity: 0.7;
+    transition: 0.3s;
+}
+.button-left {
+    position: absolute;
+    left: 0;
+    z-index: 2;
+}
+.button-right {
+    position: absolute;
+    right: 0;
+    z-index: 2;
+}
+
+.slideshow-items-container {
+    position: relative;
+    display: flex;
+    overflow-x: scroll;
+    /*height: 200px;*/
+}
+.slideshow-container-item {
+    display: flex;
+}
+.slideshow-item {
+    height: max-content;
+}
+
+/****************
+  Scroller 
+*****************/
+/* Firefox */
+* {
+    box-sizing: border-box;
+    scrollbar-width: thin;
+    scrollbar-color: lightblue white;
+}
+/* Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+    width: 100%;
+    height: 6px;
+}
+*::-webkit-scrollbar-track {
+    background: white;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: lightblue;
+    border: 0px solid white;
 }
